fix issue of icon falling out of place on large screens

--- a/style/style.css
+++ b/style/style.css
@@ -66,6 +66,8 @@
 }
 
 .hero .icon {
+    display: block;
+    margin: 0 auto;
     padding-bottom: 12px;
     width: 150px;
 }
